--- a/Titanic/titanic.ipynb
+++ b/Titanic/titanic.ipynb
@@ -86,9 +86,9 @@
    },
    "outputs": [],
    "source": [
-    "train  = pd.read_csv(\"./kaggle/input/titanic/train.csv\")\n",
-    "test   = pd.read_csv(\"./kaggle/input/titanic/test.csv\")\n",
-    "sample = pd.read_csv(\"./kaggle/input/titanic/gender_submission.csv\")"
+    "train  = pd.read_csv(\"../input/titanic/train.csv\")\n",
+    "test   = pd.read_csv(\"../input/titanic/test.csv\")\n",
+    "sample = pd.read_csv(\"../input/titanic/gender_submission.csv\")"
    ]
   },
   {
